pushes poster container down the screen a bit to avoid overlapping with the nav-bar

--- a/styles/index.css
+++ b/styles/index.css
@@ -27,6 +27,8 @@ div.weather {
   height: 78vh;
   flex-wrap: wrap;
   overflow: auto;
+  border: 1px solid blue;
+  margin-top: 60px;
 }
 
 .poster-container.hidden {
@@ -170,11 +172,13 @@ input:focus {
 .title{
   color: white;
   font-family: 'Helvetica Neue', helvetica, sans-serif;
-  font-size: 22px;
-  padding-inline-start: 2.5%;
+  font-size: 16px;
+  padding-left: -10px;
   top: -15px;
   width: auto;
 }
+
+
 /* icon css */
 
 /* $bg-color: #181c1d;
@@ -186,6 +190,7 @@ $color-accent: white; */
     position: fixed; /* Set the navbar to fixed position */
     top: 0; /* Position the navbar at the top of the page */
     width: 100%; /* Full width */
+    border: 1px solid red;
 }
 .icon {
   position: relative;
